--- a/index.html
+++ b/index.html
@@ -3,23 +3,26 @@
 <html>
    <head>
       <title>Top 5 Boardgames in my collection and why monolopy is the worst</title>
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <header>
        <H1>Top 5 Boardgames in my collection</h1>
-        <h4>and why monolopy is the worse</H4>
+        <h4>and why monopoly is the worst</H4>
         </header>
 <main>
     <section>
     <h1>Number 5</h1>
     <h2>Dominant Species</h2>
     <img src="domSpe.jpg">
-    <p>Its a competative area control type game where player try to be the Dominant species in each hexagon area.  Player start by taking turns queueing up which action they want to do.  Then when everyone has done so all the action happen fast.  It fun because the person on top is a easy target and trying to maneuver between the many species and take as much land for yourself is.  It can be a bit cutthroat at times but in my opinion that's what makes it fun.</p>
+    <p>It’s a competative area control type game where player try to be the Dominant species in each hexagon area.  Player start by taking turns queueing up which action they want to do.  Then when everyone has done so all the action happens fast.  It fun because the person on top is a easy target and trying to maneuver between the many species and take as much land for yourself is.  It can be a bit cutthroat at times but in my opinion that's what makes it fun.</p>
     </section>
     <section>
+        <article>
         <h1>Number 4</h1>
         <h2>Battlestar Galactica: The boardgame</h2>
         <img src="bgs.jpg">
-        <p>I have never actually seen the show but this board game is even better than it's theme.  It's pretty much a starship survival game where you try to get to the end planet before the ship is destroyed by the bad guys or the you run out of resources.  Player role change about midway through the game and they try to sabotage your trip with revealing themselves. When you make the last jump just as the enemy is surround you is really satisfying.</p>
+        <p>I have never actually seen the show but this board game is even better than it's theme.  It's pretty much a starship survival game where you try to get to the end planet before the ship is destroyed by the bad guys or the you run out of resources.  Player role change about midway through the game and they try to sabotage your trip with revealing themselves. When you make the last jump just as the enemy is surround you is really satisfying. </p>
+        </article>
     </section>
     <section>
         <h1>Number 3</h1>
@@ -31,7 +34,7 @@
         <h1>Number 2</h1>
         <h2>Wingspan</h2>
         <img src="Wingspan.jpg">
-        <p>It's about bird man.  Collecting bird and making you area the best bird area in the game.  Also every card has a unique bird on it.  It's just a fun theme and it can be friendly as you like.  It also helps that its the best put together board game I've seen.</p>
+        <p>It's about birds, man.  Collecting bird and making you area the best bird area in the game.  Also every card has a unique bird on it.  It's just a fun theme and it can be friendly as you like.  It also helps that its the best put together board game I've seen.</p>
     </section>
     <section>
         <h1>Number 1</h1>
@@ -40,11 +43,11 @@
         <p>This is a massive game that can take over 100hr to play.  It's a dungeon crawler where you work together to get through each dungeon.  The bosses are unique so are the quest.  I haven't seen everything in the game yet and am still excited to see what there is to explore</p>
     </section>
     <section>
-        <p>monolopy is boring. roll the dice move the mice.  buy everything you can. you win or they win depending on who's luckier.</p>
+        <p id="monopoly">monopoly is boring. roll the dice move the mice.  buy everything you can. you win or they win depending on who's luckier.</p>
     </section>
 </main>
 <footer>
-<p>	&copy; Dai Ho</p>
+<p> &copy; Dai Ho</p>
 </footer>
    
 </html>
